--- a/repositorio/src/App.css
+++ b/repositorio/src/App.css
@@ -45,3 +45,42 @@
   color: aliceblue;
 }
 
+.json{
+  background:black;
+  color:white;
+  width:50%; 
+  height:330px;
+  overflow-y:scroll;
+}
+
+.json::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;    /* Tamaño del scroll en horizontal */
+  
+}
+.json::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.json::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Cambiamos el fondo cuando esté en active */
+.json::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+/* Ponemos un color de fondo y redondeamos las esquinas del track */
+.container::-webkit-scrollbar-track {
+  background: #e1e1e1;
+  border-radius: 4px;
+}
+
+/* Cambiamos el fondo cuando esté en active o hover */
+.json::-webkit-scrollbar-track:hover,
+.json::-webkit-scrollbar-track:active {
+background: #d4d4d4;
+}
