--- a/repositorio/src/App.css
+++ b/repositorio/src/App.css
@@ -1,6 +1,6 @@
 .App {
   background-color: #dde0ee;
-  min-height: 90vh;
+  min-height: 200%;
   display: flex;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -61,9 +61,22 @@
 .main{
   height:100%;
 }
+
 .verdata{
   height:450px;
   overflow-y: scroll;
+}
+
+.mensajes{
+  height:250px;
+  overflow-y: scroll;
+  /*background-color: #FFFF;*/
+  
+}
+
+.mensajes::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;    /* Tamaño del scroll en horizontal */
 }
 
 .verdata::-webkit-scrollbar{
@@ -81,6 +94,12 @@
   height: 8px;    /* Tamaño del scroll en horizontal */
 }
 
+
+.mensajes::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
 .verdata::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 4px;
@@ -96,7 +115,13 @@
   border-radius: 4px;
 }
 
+
 /* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.mensajes::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .verdata::-webkit-scrollbar-thumb:hover {
   background: #b3b3b3;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
@@ -113,11 +138,13 @@
 }
 
 /* Cambiamos el fondo cuando esté en active */
-.verdata::-webkit-scrollbar-thumb:active {
+.mensajes::-webkit-scrollbar-thumb:active {
   background-color: #999999;
 }
 
-
+.verdata::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
 
 .json::-webkit-scrollbar-thumb:active {
   background-color: #999999;
@@ -151,5 +178,10 @@ background: #d4d4d4;
 
 .verdata::-webkit-scrollbar-track:hover,
 .verdata::-webkit-scrollbar-track:active {
+background: #d4d4d4;
+}
+
+.mensajes::-webkit-scrollbar-track:hover,
+.mensajes::-webkit-scrollbar-track:active {
 background: #d4d4d4;
 }
